leptos-fluent-macros/tests/ui/leptos_fluent/failing/empty_value.stderr
error: Not a valid value for 'url_param' of leptos_fluent! macro. Must be a literal string or a valid expression. Found ,
  --> tests/ui/leptos_fluent/failing/empty_value.rs:17:20
   |
17 |         url_param: ,
   |                    ^
